# AIstory

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/: constants.py  main.py
apps/assets/: Menu.py  Text.py  __init__.py
apps/handles/: __init__.py  culture_handler.py  data_event.py  db_handles.py  event_handler.py  start_menu.py
apps/models/: TestManager.py  __init__.py
apps/utils/: __init__.py  generate_answers.py  message_cleanup.py
database/: __init__.py  db_engine.py  load_data.py  test_db.py
database/models/: __init__.py  culture.py  event.py  user.py
scripts/: manual_backup.sh
