[tool.poetry]
name = "aistory"
version = "0.1.0"
description = "AI Story - TG bot history teacher"
authors = [
    "max1m111an <maksimilianbegunov@inbox.ru>",
    "Qurlya <pingvining05@mail.ru>"
]
readme = "README.md"
packages = [{include = "apps"}]

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
