[tool.poetry]
name = "aistory"
version = "0.1.0"
description = "AI Story - TG bot history teacher"
authors = [
    "max1m111an <maksimilianbegunov@inbox.ru>",
    "Qurlya <pingvining05@mail.ru>"
]
readme = "README.md"
packages = [{include = "apps"}]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.44"
greenlet = "^3.2.4"
cryptography = "^46.0.3"
dotenv = "^0.9.9"
python-telegram-bot = {extras = ["job-queue"], version = "^22.6"}
aiomysql = "^0.3.2"
pandas = "^2.3.3"
aiofiles = "^25.1.0"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
